# why2025-clife

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  README.md  THANKS  TODO.md  firmware.code-workspace  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
apps/: CMakeLists.txt
apps/framebuffer_test/: framebuffer_test_a.c
apps/hardware_test/: test_badge.c  test_badge.h  test_keyboard.c  test_keyboard.h
apps/sdl_test/: sdl_test.c
badgevms/: CMakeLists.txt  application.c  application_private.h  badgevms_config.h  curl.c  device.c  device_private.h  idf_component.yml  init.c  init.h  logical_names.c  logical_names.h  memory.c  memory.h  memory_get_malloc_info.h  memory_heap_caps.c  ota.c  ota_private.h  pathfuncs.c  pathfuncs_private.h  symbols.yml  task.c  task.h  why2025_firmware.c  why_io.h  why_io_port.h  wrapped_fs.c  wrapped_funcs.c  wrapped_funcs.h
badgevms/compositor/: compositor.c  compositor_private.h  pixel_functions.c  pixel_functions.h
badgevms/drivers/: badgevms_i2c_bus.c  bosch_bmi270.c  bosch_bmi270.h  fatfs.c  fatfs.h  socket.c  socket.h  st7703.c  st7703.h  tca8418.c  tty.c  wifi.c
badgevms/drivers/esp-serial-flasher/: slave_c6_flasher.c  slave_c6_flasher.h  why2025_firmware.c  why2025_firmware.h
badgevms/include/badgevms/: application.h  compositor.h  device.h  keymap_us.h  misc_funcs.h  ota.h  pathfuncs.h  pixel_formats.h  process.h  thread.h  wifi.h
badgevms/include/curl/: curl.h
components/: CHANGES
components/bmi270/: CHECKSUMS.json
components/elf_loader/: CMakeLists.txt
components/esp-tls/: CMakeLists.txt  esp_tls.c  esp_tls_mbedtls.c  esp_tls_wolfssl.c
components/esp_http_client/: CMakeLists.txt  esp_http_client.c
components/esp_lcd/: CMakeLists.txt  fbs
components/esp_lcd_st7703/: esp_lcd_st7703.c
components/esp_psram/: Kconfig  Kconfig.spiram.common  esp_psram.c
components/esp_tca8418/: CMakeLists.txt  LICENSE  README.md  esp_tca8418.c  idf_component.yml
components/esp_tca8418/include/: esp_tca8418.h  keymap.h
components/esptool_py/: CMakeLists.txt
components/hal/: cache_hal.c
components/sdl3/: CMakeLists.txt  idf_component.yml
components/why_stdio/: CMakeLists.txt  asnprintf.c  asprintf.c  atod_engine.c  atod_ryu.c  atof_engine.c  atof_ryu.c  atold_engine.c  bufio.c  clearerr.c  conv_flt.c  ctype.c  dtoa.h  dtoa_engine.c  dtoa_ryu.c  dtox_engine.c  ecvt_r.c  ecvtf_r.c  ecvtl_r.c  fclose.c  fcvt_r.c  fcvtf_r.c  fcvtl_r.c  fdevopen.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgetpos.c  fgets.c  fileno.c  filestrget.c  filestrput.c  filestrputalloc.c  fmemopen.c  fopen.c  fprintf.c  fputc.c  fputs.c  (+59 more)
components/why_stdio/include/: picolibc.h  stdlib.h  string.h
compute_badgevms/: CMakeLists.txt  badgevms_config.h  curl.c  hash_helper.h  idf_component.yml  logical_names.c  memory_get_malloc_info.h  ota.h  symbols.yml  task.c  task.h  why2025_firmware.c  wrapped_funcs.c
compute_badgevms/compositor/: compositor.c  compositor_private.h  framebuffer_private.h  window_decorations.c
compute_badgevms/drivers/: badgevms_i2c_bus.c  fatfs.c  st7703.h  tca8418.c  wifi.c  wifi.h
compute_badgevms/ota/: ota_private.h
compute_badgevms_host_tests/: CMakeLists.txt
compute_badgevms_sdk_apps/: CMakeLists.txt
compute_badgevms_sdk_apps/bench_basic_a/: bench_basic_a.c
compute_badgevms_sdk_apps/curl_test/: curl_test.c
compute_badgevms_sdk_apps/hardware_test/: run_tests.c  run_tests.h  test_badge.c  test_drawing_helper.c  test_drawing_helper.h
compute_badgevms_sdk_apps/wifi_test/: wifi_test.c
compute_badgevms_sdk_include/sys/: socket.h
compute_badgevms_sdk_libs/: CMakeLists.txt
compute_badgevms_sdk_libs/sdl3/src/video/: SDL_badgevmsevents.c  SDL_badgevmsframebuffer.c
compute_factory/: CMakeLists.txt
compute_factory/main/: CMakeLists.txt
compute_storage/: CMakeLists.txt
connectivity_esp_hosted/: .gitignore
fatfs_image/: testfile
flash_storage/: CMakeLists.txt
flash_storage/skel/: init.toml  mpytool.sh
host_tests/: CMakeLists.txt
include/: netdb.h  time.h
include/arpa/: inet.h
include/badgevms/: compositor.h  device.h  event.h  framebuffer.h  keyboard.h  ota.h  pathfuncs.h
main/: CMakeLists.txt  Kconfig.projbuild  badgevms_config.h  bitfuncs.h  bitops.h  buddy_alloc.c  buddy_alloc.h  compositor.c  compositor.h  device.c  device.h  device_private.h  elf_symbols.h  event.h  framebuffer.h  generate_symbols.py  hash_helper.h  idf_component.yml  khash.h  logical_names.c  logical_names.h  memory.c  memory.h  memory_get_malloc_info.h  memory_heap_caps.c  misc_funcs.h  pathfuncs.c  pathfuncs.h  pathfuncs_private.h  static-buddy.c  static-buddy.h  symbol_table.c  symbols.yml  task.c  task.h  user_event.c  why2025_firmware.c  why_io.h  wrapped_funcs.c
main/compositor/: compositor.c  compositor_private.h  font.h  framebuffer_private.h  pixel_functions.c  pixel_functions.h  window_decorations.c  window_decorations.h
main/drivers/: badgevms_i2c_bus.h  fatfs.c  fatfs.h  keyboard.h  st7703.c  st7703.h  tca8418.c  tca8418.h  tty.c  tty.h  wifi_internal.h
main/include/badgevms/: wifi.h
main/test_elf/: bench_basic_b.c  fix_stdio.h  framebuffer_test_a.c  sdl_test.c  test_badge.c  test_basic_a.c  test_basic_b.c  test_basic_c.c
misc/: format.sh  template.c  template.h
sdk_apps/: CMakeLists.txt
sdk_apps/_template/: manifest.json
sdk_apps/appdb_test/: main.c  manifest.json
sdk_apps/badgevms_launcher/: font.h  main.c  manifest.json
sdk_apps/badgevms_settings/: main.c  main.c.bak  manifest.json
sdk_apps/bench_basic_a/: manifest.json
sdk_apps/bench_basic_b/: manifest.json
sdk_include/: dirent.h  picolibc.h
sdk_libs/: CMakeLists.txt
sdk_libs/sdl3/: CMakeLists.txt
sdk_libs/sdl3/SDL3/src/video/: SDL_sysvideo.h
sdk_libs/sdl3/include/: SDL_build_config.h
sdk_libs/sdl3/src/video/: SDL_badgevmsevents.c  SDL_badgevmsevents.h  SDL_badgevmsevents_c.h  SDL_badgevmsframebuffer.c  SDL_badgevmsvideo.c  SDL_badgevmsvideo.h
test/: CMakeLists.txt  bench_basic_a.c  bench_basic_b.c  fix_stdio.h  framebuffer_test_a.c  test_basic_a.c  test_basic_b.c
(+88 files in other folders)
