idf_component_register( SRCS
  ctype.c
  asnprintf.c
  asprintf.c
  atold_engine.c
  bufio.c
  clearerr.c
  #compare_exchange.c
  dtox_engine.c
  #ecvt.c
  #ecvtf.c
  #ecvtf_r.c
  #ecvtl.c
  #ecvtl_r.c
  #ecvt_r.c
  #exchange.c
  fclose.c
  #fcvt.c
  #fcvtf.c
  #fcvtf_r.c
  #fcvtl.c
  #fcvtl_r.c
  #fcvt_r.c
  #fdevopen.c
  fdopen.c
  feof.c
  ferror.c
  fflush.c
  fgetc.c
  fgets.c
  fgetpos.c
  #fgetwc.c
  #fgetws.c
  fileno.c
  filestrget.c
  filestrputalloc.c
  filestrput.c
  #filewstrget.c
  #flockfile.c
  fmemopen.c
  fopen.c
  fprintf.c
  fputc.c
  fputs.c
  #fputwc.c
  #fputws.c
  fread.c
  freopen.c
  fscanf.c
  fseek.c
  fseeko.c
  ftell.c
  ftello.c
  ftox_engine.c
  #ftrylockfile.c
  #funlockfile.c
  funopen.c
  #fwide.c
  #fwprintf.c
  fwrite.c
  #fwscanf.c
  gcvt.c
  gcvtf.c
  gcvtl.c
  getchar.c
  getdelim.c
  getline.c
  gets.c
  #getwchar.c
  dtoa_engine.c
  dtox_engine.c
  #matchcaseprefix.c
  #mktemp.c
  #perror.c
  printf.c
  putchar.c
  puts.c
  #putwchar.c
  #remove.c
  rewind.c
  scanf.c
  setbuf.c
  setbuffer.c
  setlinebuf.c
  setvbuf.c
  sflags.c
  snprintf.c
  snprintfd.c
  snprintff.c
  sprintf.c
  sprintfd.c
  sprintff.c
  sscanf.c
  #strfromd.c
  #strfromf.c
  #strfroml.c
  #strtod.c
  #strtod_l.c
  #strtof.c
  #strtof_l.c
  #strtoimax.c
  #strtoimax_l.c
  #strtol.c
  #strtold.c
  #strtold_l.c
  #strtol_l.c
  #strtoll.c
  #strtoll_l.c
  #strtoul.c
  #strtoul_l.c
  #strtoull.c
  #strtoull_l.c
  #strtoumax.c
  #strtoumax_l.c
  #swprintf.c
  #swscanf.c
  #tmpfile.c
  #tmpnam.c
  ungetc.c
  #ungetwc.c
  vasnprintf.c
  vasprintf.c
  vffprintf.c
  #vffscanf.c
  #vfiprintf.c
  #vfiscanf.c
  #vflprintf.c
  #vflscanf.c
  #vfmprintf.c
  #vfmscanf.c
  vfprintf.c
  vfscanf.c
  #vfwprintf.c
  #vfwscanf.c
  vprintf.c
  vscanf.c
  vsnprintf.c
  vsprintf.c
  vsscanf.c
  #vswprintf.c
  #vswscanf.c
  #vwprintf.c
  #vwscanf.c
  #wcstod.c
  #wcstod_l.c
  #wcstof.c
  #wcstof_l.c
  #wcstoimax.c
  #wcstoimax_l.c
  #wcstol.c
  #wcstold.c
  #wcstold_l.c
  #wcstol_l.c
  #wcstoll.c
  #wcstoll_l.c
  #wcstoul.c
  #wcstoul_l.c
  #wcstoull.c
  #wcstoull_l.c
  #wcstoumax.c
  #wcstoumax_l.c
  #wprintf.c
  #wscanf.c
  #sprintf_s.c
  #vfprintf_s.c
  #vsnprintf_s.c
  atod_ryu.c
  atof_ryu.c
  dtoa_ryu.c
  ftoa_ryu.c
  ryu_divpow2.c
  ryu_log10.c
  ryu_log2pow5.c
  ryu_pow5bits.c
  ryu_table.c
  ryu_umul128.c
  posixiob_stdin.c
  posixiob_stdout.c
  posixiob_stderr.c
  
  PRIV_INCLUDE_DIRS "." 
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
  -D__PICOLIBC_ERRNO_FUNCTION=why_errno
)

target_compile_options(${COMPONENT_LIB} PRIVATE
    -nostdlib
    -nostdinc
    -fno-builtin
    -fno-builtin-functions
    "SHELL:-isystem ${CMAKE_CURRENT_SOURCE_DIR}/include"
    "SHELL:-isystem ${CMAKE_CURRENT_SOURCE_DIR}/include/sys"
    "SHELL:-isystem ${CMAKE_CURRENT_SOURCE_DIR}/stdlib"
)
